--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/boj.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOOK OF JEETS</title>
+    <meta name="description" content="The next book that will give you the knowledge of 100X">
   </head>
   <body>
     <div id="root"></div>
