--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/boj.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BOOK OF JEETS</title>
+    <title>BOOK OF JEET</title>
     <meta name="description" content="The next book that will give you the knowledge of 100X">
   </head>
   <body>
